@@ -329,31 +329,69 @@
 			[row]
 
 				[column]
-					border = "all"
-					border_size = 5
-					horizontal_alignment = "left"
 
-					[label]
-						id = "title"
-						definition = "title"
-					[/label]
+					[grid]	
 
-				[/column]
+						[row]
 
-			[/row]
+							[column]
+								vertical_alignment = "top"
 
-			[row]
-				grow_factor = 1
+								[image]
+									id = "image"
+									definition = "default"
+								[/image]
 
-				[column]
-					border = "all"
-					border_size = 5
-					horizontal_alignment = "left"
+							[/column]
 
-					[scroll_label]
-						id = "label"
-						definition = "default"
-					[/scroll_label]
+							[column]
+								grow_factor = 1
+								vertical_alignment = "top"
+								horizontal_alignment = "left"
+
+								[grid]
+
+									[row]
+
+										[column]
+											border = "all"
+											border_size = 5
+											horizontal_alignment = "left"
+
+											[label]
+												id = "title"
+												definition = "title"
+											[/label]
+
+										[/column]
+
+									[/row]
+
+									[row]
+										grow_factor = 1
+
+										[column]
+											border = "all"
+											border_size = 5
+											vertical_alignment = "top"
+											horizontal_alignment = "left"
+
+											[scroll_label]
+												id = "label"
+												definition = "default"
+											[/scroll_label]
+
+										[/column]
+
+									[/row]
+
+								[/grid]
+
+							[/column]
+
+						[/row]
+
+					[/grid]
 
 				[/column]
 
