@@ -220,6 +220,7 @@ wesnoth_sources = Split("""
     gui/widgets/event_handler.cpp
     gui/widgets/grid.cpp
     gui/widgets/helper.cpp
+    gui/widgets/image.cpp
     gui/widgets/label.cpp
     gui/widgets/listbox.cpp
     gui/widgets/menubar.cpp
