@@ -24,7 +24,8 @@ Version 1.5.4+svn:
    * Added a new scroll label widget.
    * Allowed usage of wildcards (? and *) in friend and ignore lists.
    * Allowed usage of lists in /friend, /ignore and /remove commands. (feature
-   #7492)
+     #7492)
+   * Added a new image widget.
  * WML engine:
    * New command, [store_time_of_day], makes it possible to store ToD info
      in a WML array/container.
